--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "material-icons-react": "^1.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-alert": "^4.0.3",
     "react-dom": "^16.3.2",
     "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "react-sliding-pane": "^2.0.2"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
