--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react": "^16.3.2",
     "react-alert": "^4.0.3",
     "react-apollo": "^2.1.4",
+    "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.2",
+    "react-facebook-login": "^4.0.1",
+    "react-google-login": "^3.2.1",
     "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
@@ -19,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "set HTTPS=true&&DEV=true&&npm start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
