--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "graphql-tag": "^2.9.2",
     "material-icons-react": "^1.0.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
     "react-alert": "^4.0.3",
     "react-apollo": "^2.1.4",
-    "react-burger-menu": "^2.4.4",
-    "react-dom": "^16.3.2",
+    "react-dock": "^0.2.4",
+    "react-dom": "^16.4.0",
     "react-facebook-login": "^4.0.1",
     "react-google-login": "^3.2.1",
     "react-modal": "^3.4.4",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "set HTTPS=true&&DEV=true&&npm start",
+    "dev": "set HTTPS=true&&npm start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
