--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-google-login": "^3.2.1",
     "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
-    "react-stars": "^2.2.5"
+    "react-stars": "^2.2.5",
+    "react-tabs": "^2.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
