--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "img-loader": "^3.0.0",
     "style-loader": "^0.21.0",
