--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^16.4.0",
     "react-alert": "^4.0.3",
     "react-apollo": "^2.1.4",
+    "react-collapse": "^4.0.3",
     "react-dock": "^0.2.4",
     "react-dom": "^16.4.0",
     "react-facebook-login": "^4.0.1",
     "react-google-login": "^3.2.1",
     "react-modal": "^3.4.4",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-stars": "^2.2.5",
     "react-tabs": "^2.2.2"
